--- a/kreddit-app/Shared/CreateComment.razor
+++ b/kreddit-app/Shared/CreateComment.razor
@@ -22,6 +22,6 @@
         }
         // TODO: Provide list of users from dropdown, or maybe just convert
         // from username to UserId
-        await apiService.CreateComment(content, PostId, 2); // UserId: 2
+        await apiService.CreateComment(content, PostId, "Asger"); // UserId: 2
     }
 }
