--- a/kreddit-app/Pages/PostList.razor
+++ b/kreddit-app/Pages/PostList.razor
@@ -18,6 +18,7 @@ else
             <th>Title</th>
             <th>Content</th>
             <th colspan="3">Votes</th>
+            <th>Date</th>
         </tr>
         @foreach (var post in posts)
         {
@@ -31,11 +32,13 @@ else
                 <td>@(post.Score)</td>
                 <td><button @onclick="() => Upvote(post.PostId)">Upvote</button></td>
                 <td><button @onclick="() => Downvote(post.PostId)">Downvote</button></td>
+                <td>@post.Date</td>
             </tr>
         }
     </table>
 
     <br/>
+    <CreatePost></CreatePost>
 }
 
 @code {
